--- a/fb.html
+++ b/fb.html
@@ -1,7 +1,6 @@
 <html prefix="og: http://ogp.me/ns#">
 <head>
-<meta property="og:url" content="http://www.amazon.com/dp/B00B0FV4FE/" />
-<meta property="og:image" content="http://ecx.images-amazon.com/images/I/41S8ciG-2AL.jpg" />
-<script type="text/javascript">window.location = "http://amzn.to/1Oi25hU";</script>
+<meta property="og:url" content="http://flipkart.com" />
+<script type="text/javascript">window.location = "http://google.com";</script>
 </head>
 </html>
