--- a/glocal.html
+++ b/glocal.html
@@ -1,6 +1,6 @@
 <html prefix="og: http://ogp.me/ns#">
 <head>
-<meta property="og:url" content="http://www.amazon.com/dp/B00N2QZJDC/" />
-<script type="text/javascript">window.location = "http://amzn.to/1TOoUNY";</script>
+<meta property="og:url" content="http://consumer.healthday.com/sleep-disorder-information-33/ambien-news-21/car-crash-risk-doubles-for-new-users-of-sleeping-pills-study-finds-700334.html" />
+<script type="text/javascript">window.location = "http://watthead.github.io/test.html";</script>
 </head>
 </html>
